# edg4x-rose

src/ROSETTA/: astNodeList
src/ROSETTA/Grammar/: Expression.code  Statement.code
src/ROSETTA/src/: expression.C  statement.C
src/ROSETTA/src/x10/: exp_terminals.cpp  terminals.cpp
src/backend/unparser/X10CodeGeneration/: unparseX10.h  unparseX10_expressions.C  unparseX10_statements.C  unparseX10_types.C
src/frontend/SageIII/: nodeBuildFunctionsForAterms.C
src/frontend/SageIII/sageInterface/: sageBuilder.C  sageBuilder.h  sageInterface.C  sageInterface.h
src/frontend/SageIII/virtualCFG/: memberFunctions.C
src/frontend/X10_ROSE_Connection/: Parser.h  ParserActionROSE.C  setenv-rose.sh  x10ActionROSE.C  x10Parser.h  x10_main.cpp  x10_support.C  x10_support.h
tests/CompileTests/x10_tests/: Annotation0.x10  Annotation1.x10  Annotation2.x10  Assert0.x10  Assert1.x10  Assert2.x10  Assert3.x10  AssignOp0.x10  Atomic0.x10  Block0.x10  BooleanLiteral0.x10  ClockedAsync.x10  ClockedFinish.x10  Closure0.x10  Closure1.x10  Closure2.x10  Closure3.x10  Closure4.x10  Closure5.x10  Closure6.x10  Closure7.x10  Closure8.x10  Closure9.x10  Constructor0.x10  Constructor1.x10  Constructor2.x10  Constructor3.x10  Dowhile0.x10  EmptyClass2.x10  EqualOp0.x10  EqualOp1.x10  EqualOp2.x10  Exception0.x10  Exception1.x10  Field0.x10  Field0_p.x10  Field1.x10  Field1_p.x10  FieldDecl0.x10  For0.x10  (+92 more)
